--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Seu Nome - Portfólio</title>
+    <title>Morrison Duncan - Portfólio</title>
 </head>
 <body>
     <header>
-        <h1>Seu Nome</h1>
-        <p>Desenvolvedor Web</p>
+        <h1>Morrison Duncan</h1>
+        <p>Cientista de Dados</p>
     </header>
 
     <section id="about">
         <h2>Sobre Mim</h2>
-        <p>Olá, eu sou [Seu Nome]. Sou um desenvolvedor web apaixonado por criar experiências interativas e envolventes na web.</p>
-    </section>
+        <p>Olá, eu sou Morrison Duncan. Sou estudante de ciência de dadose aqui pretendo mostrar alguns dos meus projetos</p>
 
     <section id="projects">
         <h2>Projetos Recentes</h2>
@@ -31,8 +30,8 @@
 
     <section id="contact">
         <h2>Contato</h2>
-        <p>Email: seuemail@example.com</p>
-        <p>GitHub: <a href="https://github.com/seuusuario" target="_blank">seuusuario</a></p>
+        <p>Email: morrisonsduncan@gmail.com</p>
+        <p>GitHub: <a href="https://github.com/matevs77" target="_blank">matevs77</a></p>
     </section>
 
     <script src="script.js"></script>
